<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Test"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="349dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="450dp"
        android:onClick="startButton"
        android:text="Старт"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/BtnIncorrect"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="225dp"
        android:onClick="inCor"
        android:text="@string/НЕВЕРНО"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="334dp"
        android:layout_height="35dp"
        android:layout_marginBottom="300dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Incorrect"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="334dp"
        android:layout_height="28dp"
        android:layout_marginBottom="225dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Correct"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Incorrect"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ExampleLine"
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="15dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/TextFirstOperand"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_00"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Operation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextSecondOperand"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zerozero"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="="
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/TVResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="00"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <TextView
        android:id="@+id/ResultInPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="0.0%"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="287dp"
        android:layout_height="36dp"
        android:layout_marginBottom="500dp"
        android:text="@string/resitog"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/ressultOfAllEx"
        android:layout_width="61dp"
        android:layout_height="37dp"
        android:layout_marginStart="195dp"
        android:layout_marginBottom="430dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wqe"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/BtnCorrect"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="225dp"
        android:onClick="corButton"
        android:text="ВЕРНО"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        tools:ignore="HardcodedText,MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="342dp"
        android:layout_height="29dp"
        android:layout_marginBottom="225dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Минимум"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Максимум"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Среднее"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="17dp"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/TVRec"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/TVMax"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/TVAvg"
            android:layout_width="9dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0.0"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="325dp"
        android:text="Время (сек)"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
